# RustRayTracing

./: Cargo.toml
output/: base3.ppm  base4.ppm  base5.ppm  camera_blur.ppm  checkers.ppm  cornell_box.ppm  cornell_smoke.ppm  diffuse_lights.ppm  earth.ppm  materials.ppm  perlin_noise.ppm  quads.ppm  test copy.ppm  test.ppm  week2.ppm  weekend_final.ppm
output/week/: week4.ppm
output/weekend/: weekend3.ppm  weekend4.ppm  weekend5.ppm  weekend_final.ppm
src/: color.rs  image_info.rs  interval.rs  lib.rs  main.rs  ray.rs  terminal.rs  vector.rs
src/camera/: mod.rs
src/example/: camera_blur.rs  checkers.rs  cornell_box.rs  cornell_smoke.rs  diffuse_lights.rs  earth.rs  final_scene.rs  materials.rs  moving_spheres.rs  perlin_noise.rs  quads.rs  uv_sphere.rs
src/example/week/: week1.rs  week2.rs  week3.rs  week4.rs  week5.rs
src/example/weekend/: weekend1.rs  weekend2.rs  weekend3.rs  weekend4.rs  weekend5.rs  weekend_final.rs
src/hittable/: aabb.rs  bvh.rs  constant_medium.rs  cuboid.rs  hit_record.rs  hittable_list.rs  mod.rs  quad.rs  sphere.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/noise/: mod.rs  perlin.rs
src/texture/: checker_texture.rs  image_texture.rs  mod.rs  noise_texture.rs  solid_color.rs
src/writter/: bmp_writter.rs  general_writter.rs  mod.rs  ppm_writter.rs
