[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"
default-run = "raytracing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "weekend1"
path = "src/example/weekend/weekend1.rs"

[[example]]
name = "weekend2"
path = "src/example/weekend/weekend2.rs"

[[example]]
name = "weekend3"
path = "src/example/weekend/weekend3.rs"

[[example]]
name = "weekend4"
path = "src/example/weekend/weekend4.rs"

[[example]]
name = "weekend5"
path = "src/example/weekend/weekend5.rs"

[[example]]
name = "weekend"
path = "src/example/weekend/weekend_final.rs"

[[example]]
name = "week1"
path = "src/example/week/week1.rs"


[dependencies]
rand = "0.8.5"
remove_dir_all = "0.8.2"
tempdir = "0.3.7"
