[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"
default-run = "raytracing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "weekend1"
path = "src/example/weekend/weekend1.rs"

[[example]]
name = "weekend2"
path = "src/example/weekend/weekend2.rs"

[[example]]
name = "weekend3"
path = "src/example/weekend/weekend3.rs"

[[example]]
name = "weekend4"
path = "src/example/weekend/weekend4.rs"

[[example]]
name = "weekend5"
path = "src/example/weekend/weekend5.rs"

[[example]]
name = "weekend"
path = "src/example/weekend/weekend_final.rs"

[[example]]
name = "week1"
path = "src/example/week/week1.rs"

[[example]]
name = "week2"
path = "src/example/week/week2.rs"

[[example]]
name = "week3"
path = "src/example/week/week3.rs"

[[example]]
name = "week4"
path = "src/example/week/week4.rs"

[[example]]
name = "week5"
path = "src/example/week/week5.rs"


[dependencies]
image = "0.24.7"
indicatif = "0.17.7"
rand = "0.8.5"
tempdir = "0.3.7"
termion = "2.0.3"
