[package]
name = "raytracing"
rust-version = "1.75"
version = "0.1.0"
edition = "2021"
default-run = "raytracing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "camera_blur"
path = "src/example/camera_blur.rs"

[[example]]
name = "checkers"
path = "src/example/checkers.rs"

[[example]]
name = "cornell_box"
path = "src/example/cornell_box.rs"

[[example]]
name = "cornell_smoke"
path = "src/example/cornell_smoke.rs"

[[example]]
name = "diffuse_lights"
path = "src/example/diffuse_lights.rs"

[[example]]
name = "earth"
path = "src/example/earth.rs"

[[example]]
name = "materials"
path = "src/example/materials.rs"

[[example]]
name = "moving_spheres"
path = "src/example/moving_spheres.rs"

[[example]]
name = "perlin_noise"
path = "src/example/perlin_noise.rs"

[[example]]
name = "quads"
path = "src/example/quads.rs"

[[example]]
name = "uv_sphere"
path = "src/example/uv_sphere.rs"

[[example]]
name = "final_scene"
path = "src/example/final_scene.rs"

[dependencies]
image = "0.24.7"
indicatif = "0.17.7"
rand = "0.8.5"
tempdir = "0.3.7"
termion = "2.0.3"
